# second-brain

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
api/: server.py
cortex-ui/: package-lock.json  package.json
cortex-ui/src/: App.jsx
graph/: store.py
graph.bak/: store.py
ingestion/: parser.py  watcher.py
ingestion.bak/: parser.py
interface/: cli.py
query/: engine.py
tests/: test_api_ask_model.py  test_cli_ask_model.py  test_query_engine_models.py
